syntax = "proto3";

package eventflow.ingest;

import "google/protobuf/timestamp.proto";
import "eventflow/event.proto";

option java_package = "io.eventflow.ingest.pb";
option java_outer_classname = "InvalidMessagePB";
option java_multiple_files = true;

message InvalidMessage {
  string message_id = 1;
  map<string, string> message_attributes = 2;
  bytes message_data = 3;
  google.protobuf.Timestamp received_at = 4;
  string error = 5;
  eventflow.Event event = 6;
}
